feat: Add search functionality for budgets and goals
Adds search DTOs and functionality to search for budgets and saving goals based on various criteria. Also adds wallet breakdown statistics.